# aegis-core

./: .bazelignore  .bazelrc  .gitignore  .npmrc  .pre-commit-config.yaml  ARCHITECTURE.md  BUILD.bazel  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MODULE.bazel  README.md  ROADMAP.md  SECURITY.md  buf.gen.yaml  buf.yaml  go.work  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci-baseline.yml  dependabot-auto-merge.yml  mlc_config.json  nightly-cognito-integration.yml  postdeploy-e2e.yml  release-onprem-image.yml  release-staging-frontend.yml  release-staging-image.yml  scorecard.yml
apps/staging/: README.md
apps/staging/aegis-core-engine/: rollout.yaml  seed-job.yaml
apps/staging/aegis-core-gateway/: rollout.yaml
apps/staging/aegis-engine/: deployment.yaml  networkpolicy.yaml  rollout.yaml  seed-job.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
apps/staging/aegis-gateway/: deployment.yaml  ingress.yaml  networkpolicy.yaml  rollout.yaml  (+3 more)
deploy/: README.md
deploy/staging/: namespace.yaml
docs/: github-setup.md  incidents.md  interview-notes.md  threat-model.md
docs/adr/: 0001-session-join-mechanism.md  0002-desktop-shell-technology.md  0003-host-audio-capture-strategy.md  0004-stateless-broadcast-relay.md  0005-audio-ephemeral-policy.md  0005-audio-voiceprint-ephemeral-policy.md  0006-liveness-disconnect-handling.md  0007-local-mode-lan-topology.md  0008-monorepo-folder-structure.md  0009-cpp-build-and-toolchain.md  0010-cpp-engine-runtime-architecture.md  0011-wer-golden-audio-fixtures.md  0012-remove-voiceprint-matching.md  0013-proto-codegen-distribution.md  0014-bazel-build-cache-strategy.md  0015-hermetic-nodejs-via-aspect-rules-js.md  0016-opus-decode-on-engine.md  0017-gateway-engine-topology.md  0018-language-choice-rationale.md  0019-rag-corpus-and-embedding-pipeline.md  0020-engine-owns-inference.md  0021-shared-ggml-runtime.md  0022-cloud-multi-tenancy-isolation.md  0023-demo-horizon-defaults-host-state-and-rag-binding.md  0024-consent-flows-audio-and-transcript.md  0025-oci-packaging-strategy.md  0026-model-lifecycle-on-shared-storage.md  0027-frontend-serving-strategy.md  0028-cosign-keyless-image-signing.md  0029-trivy-cve-scan-and-slsa-provenance.md  0030-progressive-delivery-controller.md  0031-mtls-without-service-mesh.md  0032-image-tag-update-automation-deferred.md  0033-engine-and-gateway-metrics-endpoint.md  0034-cloud-auth-cognito-jwt.md  0035-gateway-continuous-profiling.md  0036-deploy-topology-platform-tier.md
docs/rag/: BUILD.bazel  taiwan.md
docs/runbooks/: README.md  buildbuddy-cache-setup.md  fork-and-self-deploy.md  qdrant-cloud-setup.md  qdrant-local-setup.md
engine_cpp/: BUILD.bazel
engine_cpp/cmd/engine/: BUILD.bazel  main.cc  seed.cc  seed.h
engine_cpp/src/audio/: BUILD.bazel  opus_decoder.cc  opus_decoder.h  wav_reader.cc  wav_reader.h
engine_cpp/src/grpc/: BUILD.bazel  aegis_engine_service.cc  aegis_engine_service.h
engine_cpp/src/inference/: BUILD.bazel  embedder.cc  embedder.h  ggml_embedder.cc  ggml_embedder.h  whisper_engine.cc  whisper_engine.h
engine_cpp/src/infra/: BUILD.bazel  sensitive_bytes.h
engine_cpp/src/metrics/: BUILD.bazel  metrics.cc  metrics.h
engine_cpp/src/models/: BUILD.bazel  manifest_loader.cc  manifest_loader.h
engine_cpp/src/rag/: BUILD.bazel  chunker.cc  chunker.h  retriever.cc  retriever.h
engine_cpp/src/session/: BUILD.bazel  model_budget.cc  model_budget.h  resource_budget.cc  resource_budget.h  session.cc  session.h  session_budget.cc  session_budget.h
engine_cpp/src/vectordb/: BUILD.bazel  qdrant_client.cc  qdrant_client.h
engine_cpp/tests/integration/: BUILD.bazel  bge_m3_embed_test.cc  engine_seed_test.cc  qdrant_client_test.cc  stream_transcribe_test.cc  whisper_transcribe_test.cc
engine_cpp/tests/unit/: BUILD.bazel  chunker_test.cc  embedder_test.cc  engine_seed_util_test.cc  manifest_loader_test.cc  metrics_test.cc  model_budget_test.cc  no_dev_audio_dump_test.sh  opus_decoder_test.cc  qdrant_client_test.cc  retriever_test.cc  whisper_engine_test.cc
frontend_web/: .gitignore  README.md  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend_web/e2e/: consent-smoke.spec.ts  postdeploy-happy-path.spec.ts
frontend_web/public/: config.json
frontend_web/src/: App.tsx  main.tsx
gateway_go/: BUILD.bazel  go.mod  go.sum
gateway_go/cmd/app_local/: BUILD.bazel  main.go
gateway_go/cmd/gateway/: BUILD.bazel  main.go
gateway_go/internal/auth/: BUILD.bazel  auth.go  auth_test.go  interceptor.go  jwt.go  noop.go  oidc_integration_test.go  oidc_provider.go  oidc_provider_test.go
gateway_go/internal/cors/: BUILD.bazel  cors.go  cors_test.go
gateway_go/internal/grpc/: BUILD.bazel  gateway_service.go  gateway_service_test.go
gateway_go/internal/health/: BUILD.bazel  health.go  health_test.go
gateway_go/internal/logging/: BUILD.bazel  logger.go  logger_test.go  trace_handler.go  trace_handler_test.go
gateway_go/internal/metrics/: BUILD.bazel  metrics.go  metrics_test.go
gateway_go/internal/pipeline/: BUILD.bazel  pipeline.go  pipeline_test.go  wav.go
gateway_go/internal/profiling/: BUILD.bazel  profiling.go  profiling_test.go
gateway_go/internal/sensitive/: BUILD.bazel  redacted_pcm.go  redacted_pcm_test.go
gateway_go/internal/session/: BUILD.bazel  session.go  session_test.go
gateway_go/internal/token/: BUILD.bazel  jwt.go  jwt_test.go
models/: .gitignore  BUILD.bazel  README.md  manifest.json  manifest.schema.json
packaging/engine/: BUILD.bazel
packaging/gateway/: BUILD.bazel
proto/: buf.yaml
tools/bazelisk/: bazelisk
tools/buf/: buf
tools/rag/: README.md  requirements.txt  seed.py
tools/scripts/: check_frontend_tauri_compliance.sh  check_ggml_versions.sh  check_manifest_drift.sh  check_ssm_decryption.sh  download_models.sh  frontend.sh  gh_bootstrap.sh  go.sh  go_check.sh  lan-smoke.sh  proto_gen.sh
(+59 files in other folders)
