"""Aegis Core Bazel module (bzlmod).

Per ADR-0008 (Monorepo Folder Structure) and ADR-0009 (C++ Build and
Toolchain). This file is the source of truth for every external
dependency; supports CLAUDE.md Rule 6 (strict directory confinement)
since all deps download into ./.bazel_cache/ via --output_user_root.

Version bumps MUST be accompanied by:
  1. A review of the dependency's license (MIT/Apache-2.0/BSD OK,
     GPL/AGPL blocked per ARCHITECTURE.md §10.1).
  2. CI green on the corresponding PR.
  3. If the dep is a model or runtime, a WER regression run per
     ADR-0011.
"""

module(
    name = "aegis_core",
    version = "0.1.0",
    compatibility_level = 1,
)

# -----------------------------------------------------------------------------
# Proto & Protobuf — the backbone of proto/aegis/v1/.
# -----------------------------------------------------------------------------
bazel_dep(name = "rules_proto", version = "7.0.2")
bazel_dep(name = "protobuf", version = "28.2", repo_name = "com_google_protobuf")

# -----------------------------------------------------------------------------
# C++ toolchain & gRPC — ADR-0009 Sub-decision 2 (grpc-cpp via bzlmod).
# Adds cc_proto_library and cc_grpc_library codegen. Cold build of
# grpc transitively pulls BoringSSL, Abseil, upb, c-ares → 5-15 min
# on first build per ADR-0009.
# -----------------------------------------------------------------------------
bazel_dep(name = "rules_cc", version = "0.0.17")
bazel_dep(name = "grpc", version = "1.71.2", repo_name = "com_github_grpc_grpc")

# Abseil — already comes through grpc transitively, but we declare it at
# the top level so engine_cpp code can depend on @com_google_absl//absl/...
# directly without going through grpc's repo naming.
bazel_dep(name = "abseil-cpp", version = "20250127.2", repo_name = "com_google_absl")

# apple_support provides the host_xcodes target that grpc's universal_binary
# rules (and Bazel 7.4.1 C++ actions on macOS) implicitly depend on. Required
# whether or not full Xcode is installed — on CLT-only machines, apple_support's
# xcode_configuration gracefully degrades to the Command Line Tools.
bazel_dep(name = "apple_support", version = "1.21.0", repo_name = "build_bazel_apple_support")

# -----------------------------------------------------------------------------
# whisper.cpp — ADR-0009 Sub-decision 3 — vendored via http_archive + SHA256
# and built via rules_foreign_cc's `cmake` rule. Upstream moved from Makefile
# to CMake as the primary build; we follow.
# -----------------------------------------------------------------------------
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")

# googletest — cc_test framework for engine_cpp/tests/. Phase 1 uses
# gtest + gmock; Phase 2+ may add `fuzztest` bazel_dep for fuzz tests.
bazel_dep(name = "googletest", version = "1.17.0", repo_name = "com_google_googletest", dev_dependency = True)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "whisper_cpp",
    build_file = "//engine_cpp/third_party/whisper_cpp:whisper_cpp.BUILD",
    sha256 = "b26f30e52c095ccb75da40b168437736605eb280de57381887bf9e2b65f31e66",
    strip_prefix = "whisper.cpp-1.8.4",
    urls = ["https://github.com/ggml-org/whisper.cpp/archive/refs/tags/v1.8.4.tar.gz"],
)

# -----------------------------------------------------------------------------
# Go toolchain — Phase 1 Session 5. rules_go pulls in a hermetic Go SDK
# (download extension below) and the go_proto_library codegen rules that
# let //proto/aegis/v1:aegis_go_proto produce Go gRPC bindings. Gazelle
# is the build-file generator — gateway_go/ is small enough to hand-
# maintain BUILD.bazel files, but gazelle becomes load-bearing in Phase 2
# when we add more Go packages.
# -----------------------------------------------------------------------------
bazel_dep(name = "rules_go", version = "0.52.0")
bazel_dep(name = "gazelle", version = "0.50.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
# Pinned >= 1.24.12 because gazelle 0.50.0's go_repository_tools has a
# go.work requiring go >= 1.24.12 (running lower errors out during
# external repo setup). Bump gazelle to go along.
go_sdk.download(version = "1.24.12")

# -----------------------------------------------------------------------------
# Phase 2+ dependencies (added as each component comes online):
#
#   bazel_dep(name = "rules_nodejs",     version = "6.3.2")    # Phase 3 frontend
#   bazel_dep(name = "rules_oci",        version = "2.0.1")    # Phase 4 packaging
#   bazel_dep(name = "rules_rust",       version = "0.54.0")   # Phase 4 Tauri
#
# They are commented here, not added, because:
#   (a) Each dep adds build graph surface and possible version conflicts.
#   (b) We unblock one language at a time with a verified checkpoint.
# -----------------------------------------------------------------------------
