"""Aegis Core Bazel module (bzlmod).

Per ADR-0008 (Monorepo Folder Structure) and ADR-0009 (C++ Build and
Toolchain). This file is the source of truth for every external
dependency; supports CLAUDE.md Rule 6 (strict directory confinement)
since all deps download into ./.bazel_cache/ via --output_user_root.

Version bumps MUST be accompanied by:
  1. A review of the dependency's license (MIT/Apache-2.0/BSD OK,
     GPL/AGPL blocked per ARCHITECTURE.md §10.1).
  2. CI green on the corresponding PR.
  3. If the dep is a model or runtime, a WER regression run per
     ADR-0011.
"""

module(
    name = "aegis_core",
    version = "0.1.0",
    compatibility_level = 1,
)

# -----------------------------------------------------------------------------
# Proto & Protobuf — the backbone of proto/aegis/v1/.
# -----------------------------------------------------------------------------
bazel_dep(name = "rules_proto", version = "7.0.2")
bazel_dep(name = "protobuf", version = "28.2", repo_name = "com_google_protobuf")

# -----------------------------------------------------------------------------
# C++ toolchain & gRPC — ADR-0009 Sub-decision 2 (grpc-cpp via bzlmod).
# Adds cc_proto_library and cc_grpc_library codegen. Cold build of
# grpc transitively pulls BoringSSL, Abseil, upb, c-ares → 5-15 min
# on first build per ADR-0009.
# -----------------------------------------------------------------------------
bazel_dep(name = "rules_cc", version = "0.0.17")
bazel_dep(name = "grpc", version = "1.71.2", repo_name = "com_github_grpc_grpc")

# Abseil — already comes through grpc transitively, but we declare it at
# the top level so engine_cpp code can depend on @com_google_absl//absl/...
# directly without going through grpc's repo naming.
bazel_dep(name = "abseil-cpp", version = "20250127.2", repo_name = "com_google_absl")

# apple_support provides the host_xcodes target that grpc's universal_binary
# rules (and Bazel 7.4.1 C++ actions on macOS) implicitly depend on. Required
# whether or not full Xcode is installed — on CLT-only machines, apple_support's
# xcode_configuration gracefully degrades to the Command Line Tools.
bazel_dep(name = "apple_support", version = "1.21.0", repo_name = "build_bazel_apple_support")

# -----------------------------------------------------------------------------
# whisper.cpp — ADR-0009 Sub-decision 3 — vendored via http_archive + SHA256
# and built via rules_foreign_cc's `cmake` rule. Upstream moved from Makefile
# to CMake as the primary build; we follow.
# -----------------------------------------------------------------------------
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")

# googletest — cc_test framework for engine_cpp/tests/. Phase 1 uses
# gtest + gmock; Phase 2+ may add `fuzztest` bazel_dep for fuzz tests.
bazel_dep(name = "googletest", version = "1.17.0", dev_dependency = True, repo_name = "com_google_googletest")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "whisper_cpp",
    build_file = "//engine_cpp/third_party/whisper_cpp:whisper_cpp.BUILD",
    sha256 = "b26f30e52c095ccb75da40b168437736605eb280de57381887bf9e2b65f31e66",
    strip_prefix = "whisper.cpp-1.8.4",
    urls = ["https://github.com/ggml-org/whisper.cpp/archive/refs/tags/v1.8.4.tar.gz"],
)

# libopus — ADR-0016. The engine decodes Opus frames received over
# the wire (gRPC StreamTranscribe's new OpusChunk variant) before
# feeding PCM into whisper.cpp. Same http_archive + rules_foreign_cc
# + cmake pattern as whisper_cpp above; see
# engine_cpp/third_party/libopus/libopus.BUILD for the cmake target.
http_archive(
    name = "libopus",
    build_file = "//engine_cpp/third_party/libopus:libopus.BUILD",
    sha256 = "65c1d2f78b9f2fb20082c38cbe47c951ad5839345876e46941612ee87f9a7ce1",
    strip_prefix = "opus-1.5.2",
    urls = ["https://downloads.xiph.org/releases/opus/opus-1.5.2.tar.gz"],
)

# -----------------------------------------------------------------------------
# Go toolchain — Phase 1 Session 5. rules_go pulls in a hermetic Go SDK
# (download extension below) and the go_proto_library codegen rules that
# let //proto/aegis/v1:aegis_go_proto produce Go gRPC bindings. Gazelle
# is the build-file generator — gateway_go/ is small enough to hand-
# maintain BUILD.bazel files, but gazelle becomes load-bearing in Phase 2
# when we add more Go packages.
# -----------------------------------------------------------------------------
bazel_dep(name = "rules_go", version = "0.52.0")
bazel_dep(name = "gazelle", version = "0.50.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Pinned >= 1.24.12 because gazelle 0.50.0's go_repository_tools has a
# go.work requiring go >= 1.24.12 (running lower errors out during
# external repo setup). Bump gazelle to go along.
go_sdk.download(version = "1.24.12")

# go_deps extension resolves gateway_go/go.mod into Bazel repositories
# so rules_go targets can depend on Go module deps like grpc-go and
# protobuf-go via their normal import paths. Run `bazel mod tidy` after
# editing go.mod to keep the use_repo list below in sync.
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//gateway_go:go.mod")
use_repo(
    go_deps,
    "com_github_coder_websocket",
    "com_github_golang_jwt_jwt_v5",
    "com_github_improbable_eng_grpc_web",
    "com_github_pion_webrtc_v4",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
)

# -----------------------------------------------------------------------------
# Node.js / TypeScript toolchain — ADR-0015. `aspect_rules_js` provides
# a hermetic Node toolchain and pnpm-based dependency management. This
# lands in Phase 3 (earlier than the originally-planned Phase 4a) so
# that `frontend_web/` has no system-Node prerequisite — the "clone,
# build, it just works" promise in CLAUDE.md Rule 3 stays intact.
#
# Design notes:
#   - aspect_rules_js is Aspect's fork of the original rules_nodejs;
#     it specifically addresses pnpm + peer-deps + IDE-visible
#     node_modules (the pain points the original hit at our Phase-1
#     scoping).
#   - pnpm-lock.yaml at the repo root is authoritative; Bazel reads
#     it via npm_translate_lock. Commit the lockfile alongside any
#     package.json change.
#   - Node version is pinned to 20 LTS (matches
#     frontend_web/package.json "engines" field).
# -----------------------------------------------------------------------------
bazel_dep(name = "aspect_rules_js", version = "2.1.2")
bazel_dep(name = "aspect_rules_ts", version = "3.2.0")
bazel_dep(name = "rules_nodejs", version = "6.3.0")

# Hermetic Node toolchain. The default Node 16 that rules_nodejs
# registers is too old for React 19 / Vite 6 — bump to 20.
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)
node.toolchain(node_version = "20.11.1")

# pnpm via aspect_rules_js — installed once, accessible via
# `bazel run -- @pnpm//:pnpm ...` for the initial lockfile bootstrap
# and for any ad-hoc dep-management commands. We use the default
# pnpm version bundled with aspect_rules_js (currently 8.6.7) — the
# version the extension knows about via its internal PNPM_VERSIONS
# dictionary is upstream-controlled, so we accept its pin rather than
# forcing a mismatch. When aspect_rules_js bumps, we get a newer
# pnpm; check the release notes at that point.
pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
use_repo(pnpm, "pnpm")

# npm translates the pnpm-lock.yaml into Bazel repos — one repo per
# npm package version, all hash-addressed via the lockfile's
# integrity hashes.
npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

# -----------------------------------------------------------------------------
# Phase 4+ dependencies (added as each component comes online):
#
#   bazel_dep(name = "rules_oci",        version = "2.0.1")    # Phase 4 packaging
#   bazel_dep(name = "rules_rust",       version = "0.54.0")   # Phase 4 Tauri
#
# They are commented here, not added, because:
#   (a) Each dep adds build graph surface and possible version conflicts.
#   (b) We unblock one language at a time with a verified checkpoint.
# -----------------------------------------------------------------------------
