"""Aegis Core Bazel module (bzlmod).

Per ADR-0008 (Monorepo Folder Structure) and ADR-0009 (C++ Build and
Toolchain). This file is the source of truth for every external
dependency; supports CLAUDE.md Rule 6 (strict directory confinement)
since all deps download into ./.bazel_cache/ via --output_user_root.

Version bumps MUST be accompanied by:
  1. A review of the dependency's license (MIT/Apache-2.0/BSD OK,
     GPL/AGPL blocked per ARCHITECTURE.md §10.1).
  2. CI green on the corresponding PR.
  3. If the dep is a model or runtime, a WER regression run per
     ADR-0011.
"""

module(
    name = "aegis_core",
    version = "0.1.0",
    compatibility_level = 1,
)

# -----------------------------------------------------------------------------
# Proto & Protobuf — the backbone of proto/aegis/v1/.
# -----------------------------------------------------------------------------
bazel_dep(name = "rules_proto", version = "7.0.2")
bazel_dep(name = "protobuf", version = "28.2", repo_name = "com_google_protobuf")

# -----------------------------------------------------------------------------
# C++ toolchain & gRPC — ADR-0009 Sub-decision 2 (grpc-cpp via bzlmod).
# Adds cc_proto_library and cc_grpc_library codegen. Cold build of
# grpc transitively pulls BoringSSL, Abseil, upb, c-ares → 5-15 min
# on first build per ADR-0009.
# -----------------------------------------------------------------------------
bazel_dep(name = "rules_cc", version = "0.0.17")
bazel_dep(name = "grpc", version = "1.71.2", repo_name = "com_github_grpc_grpc")

# Abseil — already comes through grpc transitively, but we declare it at
# the top level so engine_cpp code can depend on @com_google_absl//absl/...
# directly without going through grpc's repo naming.
bazel_dep(name = "abseil-cpp", version = "20250127.2", repo_name = "com_google_absl")

# apple_support provides the host_xcodes target that grpc's universal_binary
# rules (and Bazel 7.4.1 C++ actions on macOS) implicitly depend on. Required
# whether or not full Xcode is installed — on CLT-only machines, apple_support's
# xcode_configuration gracefully degrades to the Command Line Tools.
bazel_dep(name = "apple_support", version = "1.21.0", repo_name = "build_bazel_apple_support")

# boringssl — primarily exposed to our own C++ code for SHA-256 (RAG seed's
# content-hash UUID derivation, future Cosign / SLSA attestation work).
# Already pulled transitively by grpc; declaring it at top level lets us
# depend on `@boringssl//:crypto` directly with a stable repo name.
bazel_dep(name = "boringssl", version = "0.20250114.0")

# prometheus-cpp — Phase 4d C-Obs-1 (landing-zone#46 observability contract).
# C++ client library for Prometheus metrics + HTTP pull exposer (bundles
# civetweb as embedded HTTP server). BCR package (1.3.0.bcr.2), so no
# rules_foreign_cc CMake wrapper needed — targets used directly:
#   @prometheus-cpp//core:core   — Registry, Counter, Gauge, Histogram API
#   @prometheus-cpp//pull:pull   — `prometheus::Exposer` HTTP server
# Transitively pulls civetweb + zlib; BoringSSL already satisfies the TLS
# dependency (same version we declare above for our own crypto needs).
bazel_dep(name = "prometheus-cpp", version = "1.3.0.bcr.2")

# -----------------------------------------------------------------------------
# nlohmann_json — header-only JSON parser for the engine's CAS preflight
# walker (ADR-0026 §Engine responsibilities). Parses models/manifest.json at
# startup, iterates `required=true` entries, resolves CAS paths. BCR-hosted,
# no rules_foreign_cc wrapper needed.
# -----------------------------------------------------------------------------
bazel_dep(name = "nlohmann_json", version = "3.12.0.bcr.1")

# -----------------------------------------------------------------------------
# whisper.cpp — ADR-0009 Sub-decision 3 — vendored via http_archive + SHA256
# and built via rules_foreign_cc's `cmake` rule. Upstream moved from Makefile
# to CMake as the primary build; we follow.
# -----------------------------------------------------------------------------
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")

# googletest — cc_test framework for engine_cpp/tests/. Phase 1 uses
# gtest + gmock; Phase 2+ may add `fuzztest` bazel_dep for fuzz tests.
bazel_dep(name = "googletest", version = "1.17.0", dev_dependency = True, repo_name = "com_google_googletest")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# ╔══════════════════════════════════════════════════════════════════╗
# ║ VERSION-COUPLED TRIPLE — ggml / whisper.cpp / llama.cpp         ║
# ║                                                                  ║
# ║ These three deps share one ggml runtime (ADR-0021).              ║
# ║ They MUST be upgraded together. Never bump one without           ║
# ║ verifying the other two are compatible.                          ║
# ║                                                                  ║
# ║ Current pin: ggml v0.9.9                                        ║
# ║   whisper.cpp v1.8.4 — bundles ggml 0.9.8 (subset of 0.9.9)     ║
# ║   llama.cpp b8595    — bundles ggml 0.9.9-equivalent            ║
# ║                                                                  ║
# ║ Why v0.9.9: llama.cpp b8595 references `gguf_init_from_file_ptr`║
# ║ and `gguf_write_to_file_ptr`, which were added to ggml in v0.9.9║
# ║ (llama's vendored tree was cherry-picked ahead of the standalone║
# ║ v0.9.8 tag). whisper.cpp v1.8.4's bundled ggml is v0.9.8-era but║
# ║ uses only a strict subset of the v0.9.9 API, so linking against ║
# ║ the v0.9.9 standalone is backward-compatible for it.            ║
# ║                                                                  ║
# ║ Upgrade SOP: CONTRIBUTING.md §Upgrading ggml triple              ║
# ║ Dependabot: excluded (see .github/dependabot.yml)                ║
# ╚══════════════════════════════════════════════════════════════════╝

http_archive(
    name = "ggml",
    build_file = "//engine_cpp/third_party/ggml:ggml.BUILD",
    sha256 = "878a17277c30b8bdfcea71bae140ed0aafde1c51112a3f9a5baabd1e3c7fed8b",
    strip_prefix = "ggml-0.9.9",
    urls = ["https://github.com/ggml-org/ggml/archive/refs/tags/v0.9.9.tar.gz"],
)

http_archive(
    name = "whisper_cpp",
    build_file = "//engine_cpp/third_party/whisper_cpp:whisper_cpp.BUILD",
    sha256 = "b26f30e52c095ccb75da40b168437736605eb280de57381887bf9e2b65f31e66",
    strip_prefix = "whisper.cpp-1.8.4",
    urls = ["https://github.com/ggml-org/whisper.cpp/archive/refs/tags/v1.8.4.tar.gz"],
)

http_archive(
    name = "llama_cpp",
    build_file = "//engine_cpp/third_party/llama_cpp:llama_cpp.BUILD",
    sha256 = "0204ae003b6396717324f8bfa556f94d95efb6bb9e50e0b02a895f8022fcb66e",
    strip_prefix = "llama.cpp-b8595",
    urls = ["https://github.com/ggml-org/llama.cpp/archive/refs/tags/b8595.tar.gz"],
)

# libopus — ADR-0016. The engine decodes Opus frames received over
# the wire (gRPC StreamTranscribe's new OpusChunk variant) before
# feeding PCM into whisper.cpp. Same http_archive + rules_foreign_cc
# + cmake pattern as whisper_cpp above; see
# engine_cpp/third_party/libopus/libopus.BUILD for the cmake target.
http_archive(
    name = "libopus",
    build_file = "//engine_cpp/third_party/libopus:libopus.BUILD",
    sha256 = "65c1d2f78b9f2fb20082c38cbe47c951ad5839345876e46941612ee87f9a7ce1",
    strip_prefix = "opus-1.5.2",
    urls = ["https://downloads.xiph.org/releases/opus/opus-1.5.2.tar.gz"],
)

# Qdrant proto — ADR-0020 §Decision.5 (engine as Qdrant client for the
# RAG seed + query path). We check in the proto files under
# proto/qdrant/v1.17.1/ rather than vendoring the full Qdrant source
# via http_archive because the grpc cc_grpc_library rule has a known
# strip_import_prefix + external-repo path resolution quirk that
# fights the `import "qdrant_common.proto";` bare-filename imports
# used by Qdrant's own proto tree. Upstream provenance is recorded in
# proto/qdrant/v1.17.1/PROVENANCE.md (source tag + tarball SHA-256).
# Upstream license: Apache-2.0.

# -----------------------------------------------------------------------------
# Go toolchain — Phase 1 Session 5. rules_go pulls in a hermetic Go SDK
# (download extension below) and the go_proto_library codegen rules that
# let //proto/aegis/v1:aegis_go_proto produce Go gRPC bindings. Gazelle
# is the build-file generator — gateway_go/ is small enough to hand-
# maintain BUILD.bazel files, but gazelle becomes load-bearing in Phase 2
# when we add more Go packages.
# -----------------------------------------------------------------------------
bazel_dep(name = "rules_go", version = "0.52.0")
bazel_dep(name = "gazelle", version = "0.50.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Pinned >= 1.24.12 because gazelle 0.50.0's go_repository_tools has a
# go.work requiring go >= 1.24.12 (running lower errors out during
# external repo setup). Bumped to 1.24.13 (2026-04-19) per Trivy
# CRITICAL finding CVE-2025-68121 — crypto/tls incorrect certificate
# validation during TLS session resumption (fixed in 1.24.13). Phase 4b
# mini-slice 2 caught this on its first real run; demonstrates the
# scan-on-push gate doing its job. ADR-0029.
go_sdk.download(version = "1.24.13")

# go_deps extension resolves gateway_go/go.mod into Bazel repositories
# so rules_go targets can depend on Go module deps like grpc-go and
# protobuf-go via their normal import paths. Run `bazel mod tidy` after
# editing go.mod to keep the use_repo list below in sync.
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//gateway_go:go.mod")
use_repo(
    go_deps,
    "com_github_aws_aws_sdk_go_v2",
    "com_github_aws_aws_sdk_go_v2_config",
    "com_github_aws_aws_sdk_go_v2_service_cognitoidentityprovider",
    "com_github_coder_websocket",
    "com_github_golang_jwt_jwt_v5",
    "com_github_grafana_pyroscope_go",
    "com_github_improbable_eng_grpc_web",
    "com_github_lestrrat_go_jwx_v2",
    "com_github_pion_webrtc_v4",
    "com_github_prometheus_client_golang",
    "io_opentelemetry_go_contrib_instrumentation_google_golang_org_grpc_otelgrpc",
    "io_opentelemetry_go_otel",
    "io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracegrpc",
    "io_opentelemetry_go_otel_exporters_stdout_stdouttrace",
    "io_opentelemetry_go_otel_sdk",
    "io_opentelemetry_go_otel_trace",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
)

# -----------------------------------------------------------------------------
# Node.js / TypeScript toolchain — ADR-0015. `aspect_rules_js` provides
# a hermetic Node toolchain and pnpm-based dependency management. This
# lands in Phase 3 (earlier than the originally-planned Phase 4a) so
# that `frontend_web/` has no system-Node prerequisite — the "clone,
# build, it just works" promise in CLAUDE.md Rule 3 stays intact.
#
# Design notes:
#   - aspect_rules_js is Aspect's fork of the original rules_nodejs;
#     it specifically addresses pnpm + peer-deps + IDE-visible
#     node_modules (the pain points the original hit at our Phase-1
#     scoping).
#   - pnpm-lock.yaml at the repo root is authoritative; Bazel reads
#     it via npm_translate_lock. Commit the lockfile alongside any
#     package.json change.
#   - Node version is pinned to 20 LTS (matches
#     frontend_web/package.json "engines" field).
# -----------------------------------------------------------------------------
bazel_dep(name = "aspect_rules_js", version = "2.1.2")
bazel_dep(name = "aspect_rules_ts", version = "3.2.0")
bazel_dep(name = "rules_nodejs", version = "6.3.0")

# Hermetic Node toolchain. The default Node 16 that rules_nodejs
# registers is too old for React 19 / Vite 6 — bump to 20.
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)
node.toolchain(node_version = "20.11.1")

# pnpm via aspect_rules_js — installed once, accessible via
# `bazel run -- @pnpm//:pnpm ...` for the initial lockfile bootstrap
# and for any ad-hoc dep-management commands. We use the default
# pnpm version bundled with aspect_rules_js (currently 8.6.7) — the
# version the extension knows about via its internal PNPM_VERSIONS
# dictionary is upstream-controlled, so we accept its pin rather than
# forcing a mismatch. When aspect_rules_js bumps, we get a newer
# pnpm; check the release notes at that point.
pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
use_repo(pnpm, "pnpm")

# npm translates the pnpm-lock.yaml into Bazel repos — one repo per
# npm package version, all hash-addressed via the lockfile's
# integrity hashes.
npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

# -----------------------------------------------------------------------------
# OCI packaging — Phase 4a. ADR-0025 documents the strategy
# (rules_oci over Dockerfile/ko/Buildah, distroless static-debian12:nonroot
# over scratch/Alpine/Wolfi, digest pinning, non-root + read-only rootfs).
#
# rules_pkg supplies pkg_tar, used to layer Bazel-built binaries into the
# image. rules_oci pulls the base, composes layers, and produces the OCI
# image directory (oci_load adds local `docker load` for smoke testing —
# CI does NOT need oci_load, just builds the oci_image target).
# -----------------------------------------------------------------------------
bazel_dep(name = "rules_oci", version = "2.0.1")
bazel_dep(name = "rules_pkg", version = "1.0.1")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# Distroless static-debian12:nonroot — pinned by SHA256 manifest-list
# digest (NOT the tag). Digest captured 2026-04-19 via:
#   curl -sI https://gcr.io/v2/distroless/static-debian12/manifests/nonroot \
#     -H "Accept: application/vnd.oci.image.index.v1+json"
# Re-pin when bumping; record provenance in the commit message.
#
# Why static-debian12 + nonroot variant:
#   - Pure-Go binaries linked with pure=on/static=on need only a static base.
#   - The :nonroot variant ships a uid/gid 65532 user so we don't have to
#     synthesize one ourselves; combined with oci_image `user = "nonroot"`
#     it satisfies the "non-root + dropped caps" line in ROADMAP §Phase 4a.
#
# Multi-arch: pull both linux/amd64 and linux/arm64/v8 so future EKS
# nodepools (Graviton-friendly) can consume the same image index.
oci.pull(
    name = "distroless_static",
    digest = "sha256:a9329520abc449e3b14d5bc3a6ffae065bdde0f02667fa10880c49b35c109fd1",
    image = "gcr.io/distroless/static-debian12",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)
use_repo(
    oci,
    "distroless_static",
    "distroless_static_linux_amd64",
    "distroless_static_linux_arm64_v8",
)

# Distroless cc-debian13:nonroot — the base for the C++ ENGINE image (the Go
# gateway stays on distroless_static). The engine's link line (grpc++ + BoringSSL
# + protobuf + whisper.cpp/ggml/llama.cpp via rules_foreign_cc CMake + libopus)
# produces a DYNAMICALLY-linked binary — the CMake recipes don't honour -static,
# so the binary needs an ELF loader + glibc + libstdc++/libgcc_s at runtime.
# distroless_static ships none of those: the engine image built on it failed at
# `exec /usr/local/bin/engine: no such file or directory` (missing PT_INTERP)
# the first time it was actually run (WS2-2 live verify, 2026-06-16). cc-* is
# Google's designated base for dynamically-linked C/C++ (loader + glibc +
# libstdc++ + libgcc_s; base-* has glibc only).
#
# WHY debian13, not debian12: local_config_cc is non-hermetic, so the binary
# inherits the CI runner's glibc (ubuntu-24.04-arm = glibc 2.39). glibc is
# forward-compatible only — the runtime base must be >= the build glibc.
# cc-debian12 (glibc 2.36) was too old (`GLIBC_2.38 not found` at startup);
# cc-debian13 ships glibc 2.41 / GCC 14 libstdc++. Pinned by manifest-list
# digest (resolved 2026-06-16); re-pin on bump. If the build runner ever moves
# to a newer glibc than debian13, bump this base in lockstep.
oci.pull(
    name = "distroless_cc",
    digest = "sha256:d3cda6e91129130d7229a1806b6a73d292ef245ab032da7851907798024cefba",
    image = "gcr.io/distroless/cc-debian13",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)
use_repo(
    oci,
    "distroless_cc",
    "distroless_cc_linux_amd64",
    "distroless_cc_linux_arm64_v8",
)

# -----------------------------------------------------------------------------
# Phase 4+ dependencies (added as each component comes online):
#
#   bazel_dep(name = "rules_rust",       version = "0.54.0")   # Phase 4 Tauri
#
# Commented here, not added, because:
#   (a) Each dep adds build graph surface and possible version conflicts.
#   (b) We unblock one language at a time with a verified checkpoint.
# -----------------------------------------------------------------------------
